[gd_scene load_steps=13 format=3 uid="uid://c3cewnuy47k17"]

[ext_resource type="Script" uid="uid://c83yupq5s412y" path="res://Scripts/equipment_ui.gd" id="1_ujleh"]
[ext_resource type="Texture2D" uid="uid://piphobbu00fh" path="res://Materials/UI/cape.png" id="2_6x6fk"]
[ext_resource type="Texture2D" uid="uid://draw1rw01kh3b" path="res://Materials/UI/helmet.png" id="3_bktt7"]
[ext_resource type="Texture2D" uid="uid://djo2gad65dq70" path="res://Materials/UI/amulet.png" id="4_6x6fk"]
[ext_resource type="Texture2D" uid="uid://bd7a4rlp507pq" path="res://Materials/UI/weapon.png" id="5_ryunv"]
[ext_resource type="Texture2D" uid="uid://ccn3i18abs6fl" path="res://Materials/UI/chest.png" id="6_6x6fk"]
[ext_resource type="Texture2D" uid="uid://6vncklg1tcoq" path="res://Materials/UI/offhand.png" id="6_bktt7"]
[ext_resource type="Texture2D" uid="uid://c2ytcvtvaiyfu" path="res://Materials/UI/legs.png" id="7_lulfy"]
[ext_resource type="Texture2D" uid="uid://cvf1me31kwxke" path="res://Materials/UI/gloves.png" id="8_5fd6p"]
[ext_resource type="Texture2D" uid="uid://cgqdluvyc0e70" path="res://Materials/UI/boots.png" id="9_hsg5g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n0re5"]
bg_color = Color(0.18431373, 0.19607843, 0.21960784, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.16470589, 0.17254902, 0.1882353, 1)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_6x6fk"]
thickness = 2

[node name="EquipmentUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ujleh")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n0re5")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Equipment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_6x6fk")

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 3

[node name="CapeSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("2_6x6fk")
ignore_texture_size = true
stretch_mode = 5

[node name="HelmetSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("3_bktt7")
ignore_texture_size = true
stretch_mode = 5

[node name="AmuletSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("4_6x6fk")
ignore_texture_size = true
stretch_mode = 5

[node name="WeaponSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("5_ryunv")
ignore_texture_size = true
stretch_mode = 5

[node name="OffhandSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("6_bktt7")
ignore_texture_size = true
stretch_mode = 5

[node name="ChestSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("6_6x6fk")
ignore_texture_size = true
stretch_mode = 5

[node name="LegsSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("7_lulfy")
ignore_texture_size = true
stretch_mode = 5

[node name="GlovesSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("8_5fd6p")
ignore_texture_size = true
stretch_mode = 5

[node name="BootsSlot" type="TextureButton" parent="PanelContainer/VBoxContainer/GridContainer"]
modulate = Color(1.1638972, 1.1638972, 1.1638972, 1)
custom_minimum_size = Vector2(45, 45)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture_normal = ExtResource("9_hsg5g")
ignore_texture_size = true
stretch_mode = 5
